Added svg and progress circle

--- a/todoList.html
+++ b/todoList.html
@@ -18,8 +18,16 @@
           <div class="filter"></div>
           <div class="analytics">
             <div class="percentageGraphic">
-              <h1 id="percentageComplete"></h1>
-              <h3 id="completeRatio"></h3>
+                <div class="inner">
+                    <h1 id="percentageComplete"></h1>
+                    <h3 id="completeRatio"></h3>
+                </div>
+                <div class="leftHalf halfCircle">
+                    <div class="leftProgress progress"></div>
+                </div>
+                <div class="rightHalf halfCircle">
+                    <div class="rightProgress progress"></div>
+                </div>
             </div>
           </div>
           <div class="addForm">
