add calender features

--- a/todoList.html
+++ b/todoList.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div class="header">
-        <div class="calender">Thrusday, September 3rd</div>
+        <div class="calender"></div>
         <div class="logo">To-Do List</div>
       </div>
       <div class="main">
