--- a/todoList.html
+++ b/todoList.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ToDo List</title>
     <link rel="stylesheet" href="todoList.css" />
+    <link rel="preload" href="./data/todos.json" as="fetch" crossorigin>
   </head>
   <body>
     <div class="container">
@@ -67,7 +68,6 @@
         </div>
       </div>
     </div>
-
     <script type="module" src="todoList.js"></script>
   </body>
 </html>
