use data id for selection and urgency/category data type changed to string

--- a/todoList.html
+++ b/todoList.html
@@ -10,15 +10,15 @@
   <body>
     <div class="container">
       <div class="header">
-        <div class="header__calender"></div>
-        <div class="header__logo">To-Do List</div>
+        <div data-header="calender" class="header__calender"></div>
+        <div data-header="logo" class="header__logo">To-Do List</div>
       </div>
       <div class="main">
-        <div class="todoDisplay"></div>
+        <div data-containertype="todoDisplay" class="todoDisplay"></div>
         <div class="sidebar">
-          <div class="filter"></div>
-          <div class="analytics"></div>
-          <div class="addForm"></div>
+          <div data-containertype="filterTab" class="filter"></div>
+          <div data-containertype="analyticsTab" class="analytics"></div>
+          <div data-containertype="addFormTab" class="addForm"></div>
         </div>
       </div>
     </div>
