--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ToDo List</title>
-    <link rel="stylesheet" href="todoList.css" />
-    <link rel="preload" href="./../../data/todos.json" as="fetch" crossorigin />
+    <link rel="stylesheet" href="./src/todoList.css" />
+    <link rel="preload" href="./data/todos.json" as="fetch" crossorigin />
   </head>
   <body>
     <div class="container">
@@ -20,6 +20,6 @@
         </div>
       </div>
     </div>
-    <script type="module" src="todoList.js"></script>
+    <script type="module" src="./src/todoList.js"></script>
   </body>
 </html>
