--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ToDo List</title>
     <link rel="stylesheet" href="./src/todoList.css" />
-    <link rel="preload" href="./data/todos.json" as="fetch" crossorigin />
+    <!-- <link rel="preload" href="./data/todos.json" as="fetch" crossorigin /> -->
   </head>
   <body>
     <div class="container">
